Добавлены статьи на которых ссылается текст.

--- a/biblio/external.bib
+++ b/biblio/external.bib
@@ -578,6 +578,270 @@
   language={english}
 }
 
+@BOOK{инзарцев2018подводные,
+  title={Подводные робототехнические комплексы: системы, технологии, применение},
+  author={Инзарцев, АВ and Киселев, ЛВ and Костенко, ВВ and Матвиенко, ЮВ and Павин, АМ and Щербатюк, АФ},
+  year={2018},
+  publisher={Федеральное государственное бюджетное учреждение науки Институт проблем морских технологий ДВО РАН},
+  numpages = {368},
+  language = {russian}
+}
+
+@BOOK{агеев2015авто,
+  title={Автоматические подводные роботы: Системы и технологии},
+  author={Агеев, МД and Киселев ЛВ and Матвиенко ЮВ},
+  year={2005},
+  publisher={М.: Наука},
+  numpages = {400},
+  language = {russian}
+}
+
+@inproceedings{армишев86,
+  title={Исследование структуры движительных комплексов подводных аппаратов},
+  author={Армишев С.В.},
+  booktitle={Подводные аппараты и роботы},
+  publisher={М. Ин-т океанологии им П.П. Ширшова АН СССР},
+  year={1986},
+  language = {russian}
+}
+
+@article{10.1177/1729881417741738, 
+  year = {2017},
+  title = {{Design of X-rudder autonomous underwater vehicle’s quadruple-rudder allocation with Lévy flight character}}, 
+  author = {Zhang, Yinghao and Li, Yueming and Zhang, Guocheng and Zeng, Jiangfeng and Wan, Lei}, 
+  journal = {International Journal of Advanced Robotic Systems}, 
+  issn = {1729-8814}, 
+  doi = {10.1177/1729881417741738},
+  number = {6}, 
+  volume = {14},
+  language={english}
+}
+
+@article{10.1109/48.107145, 
+  title = {{The influence of thruster dynamics on underwater vehicle behavior and their incorporation into control system design}}, 
+  author = {Yoerger, D.R. and Cooke, J.G. and Slotine, J.-J.E.}, 
+  journal = {IEEE Journal of Oceanic Engineering}, 
+  issn = {0364-9059}, 
+  doi = {10.1109/48.107145},
+  pages = {167--178}, 
+  number = {3}, 
+  volume = {15}, 
+  year = {1990},
+  language={english}
+}
+
+@article{10.1109/48.468242, 
+  year = {1995}, 
+  title = {{Toward an improved understanding of thruster dynamics for underwater vehicles}}, 
+  author = {Healey, A. J. and Rock, S. M. and Cody, S. and Miles, D. and Brown, J. P.}, 
+  journal = {IEEE Journal of Oceanic Engineering}, 
+  issn = {0364-9059}, 
+  doi = {10.1109/48.468242},
+  pages = {354--361}, 
+  number = {4}, 
+  volume = {20},
+  language={english}
+}
+
+@article{whitcomb1999development,
+  title={Development, comparison, and preliminary experimental validation of nonlinear dynamic thruster models},
+  author={Whitcomb, Louis L and Yoerger, Dana R},
+  journal={IEEE journal of oceanic engineering},
+  volume={24},
+  number={4},
+  pages={481--494},
+  year={1999},
+  publisher={IEEE},
+  language={english}
+}
+
+@article{cody1992experimental,
+  title={An experimental study of the response of small thrusters to step and triangular wave inputs},
+  author={Cody, SE},
+  journal={MSME Thesis, Naval Postgraduate School, Monterey, CA},
+  year={1992},
+  language={english}
+}
+
+@article{blanke2000dynamic,
+  title={Dynamic model for thrust generation of marine propellers},
+  author={Blanke, Mogens and Lindegaard, Karl-Petter and Fossen, Thor I},
+  journal={IFAC Proceedings Volumes},
+  volume={33},
+  number={21},
+  pages={353--358},
+  year={2000},
+  publisher={Elsevier},
+  language={english}
+}
+
+@article{10.1109/robot.2005.1570115, 
+  year = {2005}, 
+  title = {{Accurate and Practical Thruster Modeling for Underwater Vehicles}}, 
+  author = {Kim, Jinhyun and Han, Jonghui and Chung, Wan Kyun and Yuh, Junku and Lee, Pan-Mook}, 
+  journal = {Proceedings of the 2005 IEEE International Conference on Robotics and Automation}, 
+  doi = {10.1109/robot.2005.1570115},
+  pages = {175--180},
+  language={english}
+}
+
+@book{newman2018marine,
+  title={Marine hydrodynamics},
+  author={Newman, John Nicholas},
+  year={2018},
+  publisher={The MIT press},
+  language={english}
+}
+
+@book{breslin1996hydrodynamics,
+  title={Hydrodynamics of ship propellers},
+  author={Breslin, John P and Andersen, Poul},
+  number={3},
+  year={1996},
+  publisher={Cambridge University Press},
+  language={english}
+}
+
+@book{carlton2018marine,
+  title={Marine propellers and propulsion},
+  author={Carlton, John},
+  year={2018},
+  publisher={Butterworth-Heinemann},
+  language={english}
+}
+
+@article{oosterveld1975further,
+  title={Further computer-analyzed data of the Wageningen B-screw series},
+  author={Oosterveld, Marinus Willem Cornelis and van Oossanen, Peter},
+  journal={International shipbuilding progress},
+  volume={22},
+  number={251},
+  pages={251--262},
+  year={1975},
+  publisher={IOS Press},
+  language={english}
+}
+
+@techreport{mclean1991dynamic,
+  title={Dynamic performance of small diameter tunnel thrusters},
+  author={McLean, Michael B},
+  year={1991},
+  institution={NAVAL POSTGRADUATE SCHOOL MONTEREY CA},
+  language={english}
+}
+
+@report{steenson2011control,
+  title={Control of an AUV from thruster actuated hover to control surface actuated flight},
+  author={Steenson, Leo V and Phillips, Alexander B and Rogers, Eric and Furlong, Maaten E and Turnock, Stephen R},
+  year={2011},
+  language={english}
+}
+
+@book{боженов1986,
+  title={Самоходные необитаемые подводные аппараты},
+  author={Боженов, Ю.А and Борков, А.П. and Гаврилов В.М. and и др.},
+  year={1986},
+  publisher={Л.},
+  pages={264},
+  language={russian}
+}
+
+@book{Filaretov,
+  title={Особенности синтеза высокоточных систем управления скоростным движением и стабилизацией подводных аппаратов в пространстве},
+  author={Филаретов, Владимир Федорович and Юхимец, Дмитрий Александрович},
+  year={2016},
+  isbn = {978-5-8044-1577-9},
+  year = {1981},
+  publisher = {Владивосток:Дальнаука},
+  pages = {400},
+  language={russian}
+}
+
+@article{vervoort2009modeling,
+  title={Modeling and control of an unmanned underwater vehicle},
+  author={Vervoort, JHAM},
+  journal={Master Traineesh. Rep},
+  pages={5--15},
+  year={2009},
+  language={english}
+}
+
+@book{antonelli2014underwater,
+  title={Underwater robots},
+  author={Antonelli, Gianluca and Antonelli, G},
+  volume={3},
+  year={2014},
+  publisher={Springer},
+  language={english}
+}
+
+@article{fossen1999guidance,
+  title={Guidance and control of ocean vehicles},
+  author={Fossen, Thor I},
+  journal={University of Trondheim, Norway, Printed by John Wiley \& Sons, Chichester, England, ISBN: 0 471 94113 1, Doctors Thesis},
+  year={1999},
+  language={english}
+}
+
+@article{georgiades2005simulation,
+  title={Simulation and control of an underwater hexapod robot},
+  author={Georgiades, Christina},
+  year={2005},
+  language={english}
+}
+
+@article{пантов1973основы,
+  title={Основы теории движения подводных аппаратов},
+  author={Пантов, ЕН and Махин, НН and Шереметов, ББ and others},
+  journal={Л.: Судостроение},
+  volume={210},
+  year={1973},
+  language={russian}
+}
+
+@article{lewis1988principles,
+  title={Principles of naval architecture second revision},
+  author={Lewis, Edward V},
+  journal={Jersey: Sname},
+  volume={2},
+  year={1988},
+  language={english}
+}
+
+@article{10.1016/s1474-6670-17-46514-1, 
+  year = {1997}, 
+  title = {{A New Method of Thruster Control in Positioning of Ships Based on Power Control}}, 
+  author = {Sørensen, Asgeir J. and Ådnanes, Alf Kåre and Fossen, Thor I. and Strand, Jann-Peter}, 
+  journal = {IFAC Proceedings Volumes}, 
+  issn = {1474-6670}, 
+  doi = {10.1016/s1474-6670(17)46514-1},
+  pages = {199--206}, 
+  number = {22}, 
+  volume = {30},
+  language={english}
+}
+
+@article{walderhaug1992motstand,
+  title={Motstand, Framdrift, Styring},
+  author={Walderhaug, H},
+  journal={Lecture Notes, Department of Marine Hydrodynamics, Norwegian University of Science and Technology (in Norwegian)},
+  year={1992}
+}
+
+@article{10.1109/48.838987, 
+  title = {{Nonlinear output feedback control of underwater vehicle propellers using feedback form estimated axial flow velocity}}, 
+  author = {Fossen, T.I. and Blanke, M.}, 
+  journal = {IEEE Journal of Oceanic Engineering}, 
+  issn = {0364-9059}, 
+  doi = {10.1109/48.838987},
+  pages = {241--255}, 
+  number = {2}, 
+  volume = {25},
+  year = {2000},
+  language={english}
+}
+
+
 
 
 
