Исправлена ошибка со скобками в выходных данных.

--- a/common/data.tex
+++ b/common/data.tex
@@ -48,7 +48,7 @@
 \newcommand{\supervisorRegalia}          % Научный руководитель, регалии
 {кандидат технических наук}
 \newcommand{\supervisorFioShort}         % Научный руководитель, ФИО
-{В.\,В.~Костенко}}
+{В.\,В.~Костенко}
 \newcommand{\supervisorRegaliaShort}     % Научный руководитель, регалии
 {канд. техн. наук}
 
