Выравнено содержимое словаря терминов.

--- a/Dissertation/dictionary.tex
+++ b/Dissertation/dictionary.tex
@@ -1,24 +1,31 @@
 \chapter*{Словарь терминов}             % Заголовок
 \addcontentsline{toc}{chapter}{Словарь терминов}  % Добавляем его в оглавление
 
-\textbf{ПА} : Подводный аппарат
+\begin{table*}[ht!]
+    \begin{tabular}{ll}
+		\textbf{ПА} &: Подводный аппарат \\
 
-\textbf{ДРК} : Движительно-рулевой комплекс
+		\textbf{ДРК} &: Движительно-рулевой комплекс \\
 
-\textbf{ИМ} : Исполнительные механизмы
+		\textbf{ИМ} &: Исполнительные механизмы \\
 
-\textbf{ТНПА} : Телеуправляемый необитаемый подводный аппарат
+		\textbf{ТНПА} &: Телеуправляемый необитаемый подводный аппарат \\
 
-\textbf{АНПА} : Автономный необитаемый подводный аппарат
+		\textbf{АНПА} &: Автономный необитаемый подводный аппарат \\
 
-\textbf{ЦМ} : Центр масс
+		\textbf{ЦМ} &: Центр масс \\
 
-\textbf{ЦВ} : Центр водоизмещения
+		\textbf{ЦВ} &: Центр водоизмещения \\
 
-\textbf{СК} : Система координат
+		\textbf{СК} &: Система координат \\
 
-\textbf{ССК} : Связанная с ПА система координат
+		\textbf{ССК} &: Связанная с ПА система координат \\
 
-\textbf{ИСК} : Инерциальная система координат
+		\textbf{ИСК} &: Инерциальная система координат \\
 
-\textbf{РУ} : Рулевое устройство
+		\textbf{РУ} &: Рулевое устройство \\
+
+		\textbf{ГДХ} &: Гидродинамические характеристики \\
+    \end{tabular}
+\end{table*}
+
