Расширена глава, которая касается идентификации скорости набегающего потока по параметрам маршевых движителей.

--- a/Dissertation/partExperiment.tex
+++ b/Dissertation/partExperiment.tex
@@ -10,7 +10,7 @@
 
 В качестве вектора управления $\nu$ удобно использовать обобщенный вектор сил и моментов, действующих на объект управления в связанной с ним системе координат (ССК), при $n=6$. Здесь и далее он будет определен как $\vect{\tau} = [f_x,f_y,f_z,m_x,m_y,m_z]^T$ где $f_x,f_y,f_z$ – проекции сил затребованных системой управления движением на продольную (ось $Ox$) поперечную (ось $Oy$) и нормальную оси (ось $Oz$) связанной с аппаратом системе координат, а $m_x,m_y,m_z$ – соответствующие затребованные проекции моментов. 
 
-Тогда модель динамики подводного аппарата записанная в векторно \hyph матричном виде имеет следующий вид \cite{Filaretov}:
+Тогда модель динамики подводного аппарата записанная в векторно-матричном виде имеет следующий вид \cite{Filaretov}:
 \begin{equation}
     \label{eq:dynamic_force}
     \vect{M}\dot{\vect{\nu}} + \vect{C}(\vect{\nu})\vect{\nu} + \vect{D}(\vect{\nu})\vect{\nu} + g(\vect{\eta})=\vect{\tau}
