--- a/Dissertation/partVelocity.tex
+++ b/Dissertation/partVelocity.tex
@@ -1,12 +1,10 @@
 \chapter{Разработка метода оценки скорости набегающего потока в устоявшемся режиме движения по изменению параметров работы маршевых движителей}\label{ch:Velocity}
 
-Для корректного распределения управляющего воздействия критически важно понимание скорости набегающего потока, так как это существенным образом влияет (как это было показано в главе \ref{sec:Propulsion/Models}) на силы и моменты которые формируются исполнительными механизмами движительно-рулевого комплекса.
-
-\section{Анализ модели гребного винта}
+\section{Анализ модели движителя в установившемся режиме работы}
 Упор создаваемый гребным винтом движителя $T$ и момент сопротивления вращению $Q$ формируемый при этом на валу определяется следующими формулами \cite{пантов1973основы}:
 \begin{gather}
-    T(n, J_0) = K_T (J_0) \rho D^4 n |n| \\
-    Q(n, J_0) = K_Q (J_0) \rho D^5 n |n|
+    T(n, J_0) = K_T (J_0) \rho D^4 n |n| \notag \\
+    Q(n, J_0) = K_Q (J_0) \rho D^5 n |n| \label{eq:torque_stab}
 \end{gather}
 \noindent где:
 \begin{itemize}
@@ -18,22 +16,23 @@
 
 Переменная $J_0$ представляет собой относительную поступь и определяется следующим уравнением:
 \begin{equation}
+    \label{eq:ratio_1}
     J_0 = \frac{u_a}{nD}
 \end{equation}
 \noindent где $u_a$ -- скорость набегающего потока воды относительно ПА.
 Эта скорость не совсем равна скорости аппарата $u$ и в устоявшемся режиме связана с ней следующим соотношением \cite{lewis1988principles}:
-\begin{equation}
+\begin{equation*}
     u_a = (1-w)u
-\end{equation}
+\end{equation*}
 \noindent где $w$ -- коэффициент попутного потока.
 Параметр $w$ находится в диапазоне $0.1-0.4$ в зависимости от конструктивных особенностей движителя и ПА.
 
 Более подробно параметр $w$ представлен в работе \cite{10.1016/s1474-6670-17-46514-1} которая опирается лекционные заметки \cite{walderhaug1992motstand}:
 
-\begin{equation}
+\begin{equation*}
     \label{eq:ambient_flow}
     u_a = (1-w)u = (1 - w_w - w_p - w_v)u
-\end{equation}
+\end{equation*}
 \noindent где:
 \begin{itemize}
     \item $w_p$ -- составная часть коэффициента попутного потока отражающая влияние так называемых потенциальных эффектов связанных с влиянием движения корпуса судна или ПА на скорость движения воды;
@@ -44,7 +43,7 @@
 \begin{gather}
     \label{eq:coef_1}
     K_T(J_0) = \alpha_1 - \alpha_2 J_0 \\
-    K_Q(J_0) = \beta_1 - \beta_2 J_0
+    K_Q(J_0) = \beta_1 - \beta_2 J_0 
 \end{gather}
 \noindent где $\alpha_i, \beta_i$ -- безразмерные положительные константы.
 
@@ -52,7 +51,298 @@
 
 Таким образом уравнения \ref{eq:coef_1} могут быть переписаны в следующей форме:
 \begin{gather}
-    K_T = K_T^{bp} - \alpha_1 J_0 \\
-    K_Q = K_Q^{bp} - \beta_1 J_0
+    K_T = K_T^{bp} - \alpha_1 J_0 \notag \\
+    K_Q = K_Q^{bp} - \beta_1 J_0 \label{eq:torque_linear}
 \end{gather}
 \noindent где $K_T^{bp}, K_Q^{bp}$ -- коэффициенты упора и момента гребного винта полученные в результате швартовых испытаний движителя.
+
+Из определения линейной аппроксимации коэффициента момента (\ref{eq:torque_linear}) и относительной поступи (уравнение \ref{eq:ratio_1}) можно выразить скорость набегающего потока следующим образом:
+\begin{equation}
+    u_a = \frac{1}{\beta_1} n D \left( K_Q^{bp} - K_Q \right)
+\end{equation}
+\noindent где коэффициент момента гребного винта в установившемся режиме хорошо описывается выражением \ref{eq:torque_stab}.
+
+С другой стороны динамика электропривода движителя стандартно представляется следующими дифференциальными уравнениями, которые хорошо описывают поведение асинхронного бесколлекторного двигателя:
+\begin{gather*}
+    L_a\frac{d}{dt}I=-R_aI-K_m n + V_m \\
+    J_m\dot{n} = K_m I - Q
+\end{gather*}
+
+Важно учесть что, при релейном управлении фазами бесколлекторного двигателя коэффициент $K_m$ не является постоянной величиной и имеет обратно экспоненциальную зависимость от времени между переключениями фаз. 
+Эта зависимость хорошо описывается следующим уравнением в установившемся режиме работы мотора:
+\begin{equation}
+    \label{eq:couple_coeff}
+    Q(n, I) = K_m(n)I = F_m \frac{I}{n}
+\end{equation}
+\noindent где $I$ -- ток на обмотках мотора, $n$ -- скорость вращения вала мотора, а переменную $F_m$ будем называть коэффициентом магнитной связности ротора и статора и её считаем величиной постоянной для данной конструкции привода.
+
+Соответственно, в установившемся режиме работы привода момент на валу мотора пропорционален току на обмотке привода, тогда может быть получено следующее выражение для расчета скорости набегающего потока на гребной винт движителя:
+
+\begin{equation}
+    \label{eq:velocity_final}
+    u_a \approx u = \frac{1}{\beta_1} \left( K_Q^{bp} n_u D - F_m\frac{I_u}{\rho D^4|n_u|n_u} \right)
+\end{equation}
+\noindent где 
+\begin{itemize}
+    \item $K_Q^{bp}$ -- коэффициент момента сопротивления вращению гребного винта рассчитанный в ходе швартовных испытаний движителя; \item $\beta_1$ -- линейный коэффициент полиномиальной аппроксимации коэффициента момент $K_Q$;
+    \item $I_u$ -- ток на обмотках привода движителя при заданном коде управления $u$;
+    \item $n_u$ -- скорость вращения вала движителя при заданном коде управления $u$;
+\end{itemize}
+
+В дальнейших расчетах мы будем принимать $u \approx u_a$, т.е. считать что коэффициент попутного потока $w$ пренебрежимо мал.
+Этот коэффициент важен для движителей судов, т.к., зачастую, движители там установлены в гидродинамической тени, которую создает корпус судна и там учет этого параметра необходим.
+При разработке автономных необитаемых подводных аппаратов, за счет малого и обтекаемого корпуса и, зачастую, за счет выноса маршевой группы из гидродинамической тени создаваемой аппаратом, этим коэффициентом можно пренебречь.
+
+\section{Учёт геометрии ДРК в методе идентификации скорости по параметрам маршевых движителей}
+В случае, если подводный аппарат оснащён единственным маршевым движителем, а маневрирование обеспечивается рулями управления в режиме крейсерской скорости или при помощи подруливающих движителей в позиционном режиме или в режиме малых скоростей. Примером таких аппаратов может служить линейка АНПА ``Remus'' \cite{allen1997remus, kukulya2010under}.
+
+С другой стороны, отечественная практика разработки автономных подводных аппаратов отходит от мировой и в основном заключается в использовании четырех движителей, расположенных в кормовой секции под некоторым углом к продольной оси аппарата.
+Это такие аппараты как «МТ-2010» \cite{борейко2011малогабаритный}, «ММТ-3000» \cite{горнак2007ммт} и прочие АНПА разработанные в Институте проблем морских технологий ДВО РАН. 
+
+Такой подход позволяет повысить надежность системы за счет отсутствия основного двигателя, поломка которого полностью выведет из строя подводный аппарат.
+Кроме этого такая конфигурация движительно-рулевого комплекса позволяет обеспечивать управление по вращательным степеням свободы даже в позиционном режиме.
+
+Если в маршевой группе движителей подводного аппарата больше одного, то расчёт скорости набегающего потока по изменению параметров работы приводов становится более затруднительным и требует точного учета расположения и ориентации каждого движителя в пространстве.
+
+Пусть движители повёрнуты относительно продольной оси аппарата на углы $\phi^i, \theta^i$, где угол $\phi^i$ определяет разворот движителя в горизонтальной плоскости, а $\phi^i$ -- разворот движителя в вертикальной плоскости.
+Идентификатор $i$ меняется в диапазоне $[1,..,k]$, где $k$ -- количество движителей в кормовой секции.
+
+В таком случае расчет скорости набегающего потока на АНПА будет следующим:
+\begin{equation}
+    \label{eq:velocity_orientation}
+    u^i = \frac{u^i_t}{\cos{\psi^i_t}\cos{\theta^i_t}}
+\end{equation}
+\noindent где:
+\begin{itemize}
+    \item $u^i$ -- скорость набегающего потока на АНПА, т.е. это определяет скорость движения АНПА относительно воды;
+    \item $u^i_t$ -- скорость набегающего потока на движитель $i$;
+    \item $\psi^i_t$ -- отклонение движителя от продольной оси аппарата в горизонтальной плоскости;
+    \item $\theta^i_t$ -- отклонение движителя от продольной оси аппарата в вертикальной плоскости плоскости;
+\end{itemize}
+
+Кроме этого, так же важно учесть, что при наличии ненулевых углов атаки $\alpha$ и дрейфа $\beta$ в скоростной системе координат идентифицируемые скорости на различных движителях будут различны и это необходимо учитывать.
+
+Пусть АНПА движется со скоростью $u$ относительно грунта с курсом $\phi$ в локальной инерциальной системе координат и постоянным дифферентом вызванным положительной плавучестью АНПА $\theta_b$.
+
+Пусть течение в области движения АНПА неизменно по скорости и направлению и определяется переменными $u_c$ и $\phi_c$ В ИСК, соответственно.
+
+\section{Исследование разработанного метода идентификации скорости набегающего потока по данным запусков АНПА ``ММТ-3000''}
+В рамках исследования была проверена гипотеза о работоспособности метода идентификации скорости набегающего потока по изменению параметров работы приводов маршевых двигателей.
+
+Для этого этого были проанализированы стендовые и маршевые испытания движителей маршевой группы АНПА ``ММТ-3000'', а так же проанализированы данные тестовых запусков подводного аппарата в рамках которых были идентифицированы ГДХ аппарата.
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.8\linewidth]{velocity/MMT3000 - общий вид.png}
+    \caption{Общий вид аппарата АНПА ``ММТ-3000''}
+    \label{fig:mmt-3000}
+\end{figure}
+
+\begin{table}
+    \caption{Параметры углов отклонения движителей маршевой группы АНПА ``ММТ-3000'' от продольной оси аппарата.}
+    \label{tab:mmt3000_propulsion_angles}
+    \centering
+    \begin{tabular}{lll}
+        % \toprule
+        Тип движителя & Угол по горизонтали $\psi$, $^{\circ}$  & Угол по вертикали $\psi$, $^{\circ}$ \\
+        Левый  & -11.25 & 3 \\
+        Правый &  11.25 & 3 \\
+        Нижний &  -22.5 & 0
+        % \bottomrule
+    \end{tabular}
+\end{table}
+
+Маршевая секция подводного аппарата состоит из трех движителей.
+Два из них расположены симметрично под углом $\psi_l$ и $\psi_r$ к продольной оси аппарата в горизонтальной плоскости и небольшим углом в вертикальной плоскости, $\theta_l$ и $\theta_r$ соответственно.
+Последний, нижний, расположен расположен под углом $\theta_v$ к продольной оси аппарата в вертикальной плоскости.
+Параметры углов наклона маршевых движителей представлены в таблице \ref{tab:mmt3000_propulsion_angles}.
+
+\subsection{Идентификация параметров работы привода движителя}
+В качестве привода маршевого движителя АНПА ``ММТ-3000'' использовался электродвигатель ``2 ДБМ 70-1,1-1,3-3'' производства ОАО «Машиноаппарат».
+Параметры электродвигателя приведены в таблице \ref{tab:mmt300_motor}
+
+\begin{table}
+    \caption{Параметры электродвигателя ``2 ДБМ 70-1,1-1,3-3'' }\label{tab:mmt300_motor}
+    \centering
+    \begin{tabular}{ll}
+        % \toprule
+        Наименование параметра  & Значение\\
+        % \midrule
+        Число пар полюсов & 8 \\
+        Число фаз & 3 \\
+        Номинальное напряжение питания, В   & 12 \\
+        Частота вращения при идеальном холостом ходе, об/мин & 1350-1650 \\
+        Пусковой момент, Н $\cdot$ м, не менее      & 6,0 \\
+        Сопротивление секции фазы (фазы) постоянному току, Ом & 0,165-0,202 \\
+        Электромагнитная постоянная времени фазы, мс & 0,4 \\
+        Коэффициент момента $K_m$, Н$\cdot$м/А   & 0,065-0,080   \\
+        Момент инерции ротора, кг$\cdot$м$^2$   & 2,5$\cdot$10$^{-4}$ \\
+        % \bottomrule
+    \end{tabular}
+\end{table}
+
+В рамках проведения нагрузочных испытаний электродвигателя был определен коэффициент магнитной связности $F_m$ (формула \ref{eq:couple_coeff}), который хорошо описывает зависимость момента на валу электропривода от величины тока на его в обмотках с поправкой на скорость вращения вала.
+На рисунке \ref{fig:motor_torque} отражена зависимость момента создаваемого электроприводом на валу и её расчет через коэффициент магнитной связности $F_m$ с поправкой на скорость вращения вала.
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.8\linewidth]{velocity/MMT3000 - Зависимость момента от тока.png}
+    \caption{Зависимость момента на валу электропривода полученная в рамках нагрузочных испытаний и её расчет через коэффициент $F_m$}
+    \label{fig:motor_torque}
+\end{figure}
+
+\subsection{Параметры гребного винта}
+В качестве гребного винта на АНПА ``ММТ-3000'' был использован стандартный трехлопастной винт, который изготавливается путем отливки из пластика.
+Гидродинамические коэффициенты винта $K_T, K_q$ были заранее получены регрессионным анализом по его геометрическим параметрам.
+Они показаны на рисунке \ref{fig:mmt3000_propeller} вместе с их линейной аппроксимацией в диапазоне относительной поступи 0-0.5, где 0.5 соответствует скорости АНПА примерно 1.5 м/с и скорости вращения гребного винта 22 об/сек.
+Все расчетные параметры гребного винта представлены в таблице \ref{tab:mmt3000_propeller}.
+
+\begin{table}
+    \caption{Параметры гребного винта движителей маршевой группы АНПА ``ММТ-3000''
+    }
+    \label{tab:mmt3000_propeller}
+    \centering
+    \begin{tabular}{ll}
+        % \toprule
+        Наименование параметра  & Значение\\
+        % \midrule
+        Количество лопастей & 3 \\
+        Диаметр, м & 0,19 \\
+        Дисковое отношение & 0,40 \\
+        Шаговое отношение & 0,87 \\
+        регрессионный $K_T$ & $-0.0964\lambda^2 -0.2774\lambda + 0.3519$ \\
+        регрессионный $K_Q$ & $-0.0144\lambda^2 -0.0301\lambda + 0.0456$ \\
+        регрессионный $K_T^{lin}$ & $-0.3256\lambda + 0.3558$ \\
+        регрессионный $K_Q^{lin}$ & $-0.0373\lambda + 0.0462$ \\
+        % \bottomrule
+    \end{tabular}
+\end{table}
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.8\linewidth]{velocity/MMT3000 - ГВ регресс.png}
+    \caption{Параметры ГВ полученные регрессионным анализом.}
+    \label{fig:mmt3000_propeller}
+\end{figure}
+
+\subsection{Анализ швартовных характеристик движителя}
+Были проведён анализ результатов швартовных испытаний движителя в рамках которого были получены значения усилия создаваемого движителем и потребляемого при этом тока в зависимости от заданного кода управления задаваемого в систему управления движителем.
+
+Код управления движителем представляет собой целое число находящееся в пределах от -127 до 127, где диапазон от 0 до 127 пропорционально изменяет эффективное значение напряжения на моторе в диапазоне от 0 до 24В, а диапазон от 0 до -127 формирует аналогичное напряжение но с обратным направлением вращения вала мотора.
+
+На рисунке \ref{fig:mmt3000_bollardpul} показана величина упора создаваемого движителем от значения кода управления публикуемого в систему управления движителем.
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.8\linewidth]{velocity/MMT3000 - швартовные испытания движителя.png}
+    \caption{Зависимость упора создаваемого движителем от кода управления.}
+    \label{fig:mmt3000_bollardpul}
+\end{figure}
+
+Кроме того была рассчитана зависимость создаваемого упора создаваемого гребным винтом (\ref{fig:mmt3000_thrust_rotation2}) и его момента сопротивления вращению (\ref{fig:mmt3000_torque_rotation2}) от квадрата скорости вращения винта для расчёта истинных величин $K_T,K_Q$.
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.8\linewidth]{velocity/MMT3000 - Зависимость упора от 2скорости.png}
+    \caption{Зависимость упора создаваемого гребным винтом от квадрата скорости вращения гребного винта.}
+    \label{fig:mmt3000_thrust_rotation2}
+\end{figure}
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.8\linewidth]{velocity/MMT3000 - Зависимость момента от 2скорости.png}
+    \caption{Зависимость момента сопротивления вращению создаваемого гребным винтом от квадрата скорости вращения гребного винта.}
+    \label{fig:mmt3000_torque_rotation2}
+\end{figure}
+
+По этим данным были уточнены параметры коэффициентов $K_T, K_Q$ в части $\lambda = 0$, то есть при отсутствии набегающего потока.
+На рисунках \ref{fig:mmt3000_propeller_kt_bollard} и \ref{fig:mmt3000_propeller_kq_bollard} соответственно отображены уточненные по результатам швартовных испытаний движителя зависимости коэффициента упора винта $K_T$ и его коэффициента момента сопротивления вращению $K_Q$.
+Численные значения уточненных линеаризованных параметров гребного винта представлены в таблице \ref{tab:mmt3000_propeller_bollard}.
+
+\begin{table}
+    \caption{Уточненные линеаризованные параметры гребного винта движителей маршевой группы АНПА ``ММТ-3000''.}
+    \label{tab:mmt3000_propeller_bollard}
+    \centering
+    \begin{tabular}{ll}
+        % \toprule
+        $K_T^{lin}$ & $-0.3256\lambda + 0.3421$ \\
+        $K_Q^{lin}$ & $-0.0373\lambda + 0.0501$ \\
+        % \bottomrule
+    \end{tabular}
+\end{table}
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.8\linewidth]{velocity/MMT3000 - ГВ Kt испытания.png}
+    \caption{Коэффициент упора винта $K_t$ с поправкой на результаты швартовных испытаний.}
+    \label{fig:mmt3000_propeller_kt_bollard}
+\end{figure}
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.8\linewidth]{velocity/MMT3000 - ГВ Kq испытания.png}
+    \caption{Коэффициент момента сопротивления вращению винта $K_q$ с поправкой на результаты швартовных испытаний.}
+    \label{fig:mmt3000_propeller_kq_bollard}
+\end{figure}
+
+\subsection{Анализ параметров АНПА при совершении скоростных маневров}
+В качестве данных для анализов использовались калибровочные запуски АНПА ``ММТ-3000'' для расчета ГДХ подводного аппарата, полученные в 2019 году в заливе Патрокл.
+Для расчета ГДХ были проведены запуски подводного аппарата на фиксированной глубине со ступенчатым изменением скорости продольного движения.
+График изменения скорости представлен на рисунке \ref{fig:mmt3000_velocity}.
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.8\linewidth]{velocity/MMT3000 - Скорость с допплера.png}
+    \caption{График изменения скорости подводного аппарата ``MMT-3000''.}
+    \label{fig:mmt3000_velocity}
+\end{figure}
+
+Соответствующие ему график изменения потребляемого тока и скорости вращения гребных винтов движителей маршевой группы представлены на рисунках \ref{fig:mmt3000_curent} и  \ref{fig:mmt3000_rotation}, соответсвенно.
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.8\linewidth]{velocity/MMT3000 - Токи движителей.png}
+    \caption{График изменения тока движителей маршевой группы подводного аппарата ``MMT-3000''.}
+    \label{fig:mmt3000_curent}
+\end{figure}
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.8\linewidth]{velocity/MMT3000 - Обороты движителей.png}
+    \caption{График изменения скорости вращения гребных винтов движителей маршевой группы подводного аппарата ``MMT-3000''.}
+    \label{fig:mmt3000_rotation}
+\end{figure}
+
+В первую очередь, по первой части движения АНПА (время от 0 до 185 секунд) были откалиброван параметр $\beta_1$, который представляет собой линейный коэффициент полиномиальной аппроксимации коэффициента сопротивления вращению гребного винта $K_Q$. 
+
+Была использована выведенная формула расчета скорости набегающего потока \ref{eq:velocity_final} с учётом геометрии движительно-рулевого комплекса (уравнение \ref{eq:velocity_orientation}).
+Для этого по методу наименьших квадратов был рассчитан такой параметр $\beta_1$ при котором минимизируется следующая разница:
+\begin{equation*}
+    min\left\{ \sum_{i=0}^N\left( v_d - v_i \right)^2 \right\}
+\end{equation*}
+\noindent где:
+\begin{itemize}
+    \item $N$ -- количество движителей маршевой группы;
+    \item $v_d$ -- продольная скорость движения АНПА полученная от датчика доплеровского лага;
+    \item $v_i$ -- скорость полученная согласно выражению \ref{eq:velocity_final} по параметрам работы движителей $i$-го движителя маршевой группы.
+\end{itemize}
+
+По данному методу коэффициент $\beta_1$ составил 0.0301 (по расчетам в рамках регрессионного анализа для данной геометрической конфигурации гребного винта данный коэффициент составил 0.0363).
+
+На рисунке \ref{fig:mmt3000_velocity_test} показан график скорости продольного движения АНПА ``ММТ-3000'' полученный разными методами на тестовом участке движения от 0 до 185 секунд.
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.8\linewidth]{velocity/ММТ3000 - идентификация b2.png}
+    \caption{График скорости продольного движения АНПА ``ММТ-3000'' полученный разными методами на тестовом участке движения от 0 до 185 секунд.}
+    \label{fig:mmt3000_velocity_test}
+\end{figure}
+
+С помощью полученных коэффициентов была рассчитана скорость АНПА ``ММТ-3000'' на обратном пути движения в диапазоне времени от 240 до 410 секунд.
+График скорости представлен на рисунке \ref{fig:mmt3000_velocity_check}.
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.8\linewidth]{velocity/ММТ3000 - тестирование b2.png}
+    \caption{График скорости продольного движения АНПА ``ММТ-3000'' полученный разными методами на проверочном участке движения от 240 до 410 секунд.}
+    \label{fig:mmt3000_velocity_check}
+\end{figure}
