Исправлена проблема с разделителями в таблицах и найден мелкий баг по тексту.

--- a/Dissertation/partVelocity.tex
+++ b/Dissertation/partVelocity.tex
@@ -104,7 +104,7 @@
 
 Если в маршевой группе движителей подводного аппарата больше одного, то расчёт скорости набегающего потока по изменению параметров работы приводов становится более затруднительным и требует точного учета расположения и ориентации каждого движителя в пространстве.
 
-Пусть движители повёрнуты относительно продольной оси аппарата на углы $\phi^i, \theta^i$, где угол $\phi^i$ определяет разворот движителя в горизонтальной плоскости, а $\phi^i$ -- разворот движителя в вертикальной плоскости.
+Пусть движители повёрнуты относительно продольной оси аппарата на углы $\phi^i, \theta^i$, где угол $\phi^i$ определяет разворот движителя в горизонтальной плоскости, а $\theta^i$ -- разворот движителя в вертикальной плоскости.
 Идентификатор $i$ меняется в диапазоне $[1,..,k]$, где $k$ -- количество движителей в кормовой секции.
 
 В таком случае расчет скорости набегающего потока на АНПА будет следующим:
@@ -143,12 +143,13 @@
     \label{tab:mmt3000_propulsion_angles}
     \centering
     \begin{tabular}{lll}
-        % \toprule
-        Тип движителя & Угол по горизонтали $\psi$, $^{\circ}$  & Угол по вертикали $\psi$, $^{\circ}$ \\
+        \toprule
+        Тип движителя & Угол по горизонтали $\psi$, $^{\circ}$  & Угол по вертикали $\theta$, $^{\circ}$ \\
+        \midrule
         Левый  & -11.25 & 3 \\
         Правый &  11.25 & 3 \\
-        Нижний &  -22.5 & 0
-        % \bottomrule
+        Нижний &  -22.5 & 0 \\
+        \bottomrule
     \end{tabular}
 \end{table}
 
@@ -165,9 +166,9 @@
     \caption{Параметры электродвигателя ``2 ДБМ 70-1,1-1,3-3'' }\label{tab:mmt300_motor}
     \centering
     \begin{tabular}{ll}
-        % \toprule
+        \toprule
         Наименование параметра  & Значение\\
-        % \midrule
+        \midrule
         Число пар полюсов & 8 \\
         Число фаз & 3 \\
         Номинальное напряжение питания, В   & 12 \\
@@ -177,7 +178,7 @@
         Электромагнитная постоянная времени фазы, мс & 0,4 \\
         Коэффициент момента $K_m$, Н$\cdot$м/А   & 0,065-0,080   \\
         Момент инерции ротора, кг$\cdot$м$^2$   & 2,5$\cdot$10$^{-4}$ \\
-        % \bottomrule
+        \bottomrule
     \end{tabular}
 \end{table}
 
@@ -203,18 +204,18 @@
     \label{tab:mmt3000_propeller}
     \centering
     \begin{tabular}{ll}
-        % \toprule
+        \toprule
         Наименование параметра  & Значение\\
-        % \midrule
+        \midrule
         Количество лопастей & 3 \\
         Диаметр, м & 0,19 \\
         Дисковое отношение & 0,40 \\
         Шаговое отношение & 0,87 \\
-        регрессионный $K_T$ & $-0.0964\lambda^2 -0.2774\lambda + 0.3519$ \\
-        регрессионный $K_Q$ & $-0.0144\lambda^2 -0.0301\lambda + 0.0456$ \\
-        регрессионный $K_T^{lin}$ & $-0.3256\lambda + 0.3558$ \\
-        регрессионный $K_Q^{lin}$ & $-0.0373\lambda + 0.0462$ \\
-        % \bottomrule
+        Регрессионный $K_T$ & $-0.0964\lambda^2 -0.2774\lambda + 0.3519$ \\
+        Регрессионный $K_Q$ & $-0.0144\lambda^2 -0.0301\lambda + 0.0456$ \\
+        Регрессионный $K_T^{lin}$ & $-0.3256\lambda + 0.3558$ \\
+        Регрессионный $K_Q^{lin}$ & $-0.0373\lambda + 0.0462$ \\
+        \bottomrule
     \end{tabular}
 \end{table}
 
@@ -263,10 +264,12 @@
     \label{tab:mmt3000_propeller_bollard}
     \centering
     \begin{tabular}{ll}
-        % \toprule
+        \toprule
+        Наименование параметра  & Значение\\
+        \midrule
         $K_T^{lin}$ & $-0.3256\lambda + 0.3421$ \\
         $K_Q^{lin}$ & $-0.0373\lambda + 0.0501$ \\
-        % \bottomrule
+        \bottomrule
     \end{tabular}
 \end{table}
 
