Доработана глава с описанием динамики исполнительных механизмов ДРК в части моделирования их работы в зависимости от набегающего потока.

--- a/Dissertation/partPropulsion.tex
+++ b/Dissertation/partPropulsion.tex
@@ -290,7 +290,7 @@
     \item $X_{\delta_i, \delta_i}, \ldots, N_{\delta_i}$ -- коэффициент сил и моментов создаваемых РУ при скорости набегаемого потока $u$.
 \end{itemize}
 
-\section{Модели динамики исполнительных элементов}\label{sec:Propulsion/Models}
+\section{Модели динамики исполнительных элементов}\label{sec:Propulsion/Model}
 Наиболее распространенными типами движителей являются гребные винты в насадке и водометные движители, которые могут устанавливаться стационарно на корпусе аппарата или на поворотных кронштейнах, которые поворачиваются на требуемый угол в плоскости или пространстве для изменения направления действия силы тяги.
 При этом использование водометных движителей ограничено их сравнительно низким КПД (0.5–0.55) по сравнению с гребными винтами, у которых он может достигать значений 0.7–0.75 \cite{инзарцев2018подводные}. Гораздо меньший КПД имеют такие экзотические движительные установки, как крыльчатые, волновые или машущие. 
 
@@ -420,10 +420,13 @@
 \paragraph{Модель привода движителя}
 
 Модель привода движителя обычно представляют следующим набором уравнений:
-\begin{gather}
-    L_a\frac{d}{dt}i_m=-R_ai_m-K_m n + V_m \\
-    J_m\dot{n} = K_m i_m - Q
-\end{gather}
+\begin{equation}
+	\label{eq:motor_model}
+	\begin{array}{ll}
+	L_a\frac{d}{dt}i_m &=-R_ai_m-K_m n + V_m \\
+    J_m\dot{n} &= K_m i_m - Q
+	\end{array}
+\end{equation}
 
 \noindent где:
 \begin{itemize}
@@ -514,7 +517,7 @@
 \end{equation}
 \noindent где:
 \begin{itemize}
-    \item $a_{sp}$ -- коэффициент подъемной силы (1/\degree);
+    \item $a_{sp}$ -- коэффициент подъемной силы (1/$^\circ$);
     \item $\alpha$ -- угол поворота РУ относительно потока жидкости;
     \item $AR$ -- соотношение сторон РУ;
 \end{itemize}
@@ -534,11 +537,14 @@
 Традиционным конструктивным и эксплуатационным решением РУ является использование кормовых рулей и элеронов, хотя при малых скоростях движения находят применение и дополнительные рули глубины.
 Управляющие моменты рулей являются функцией угла перекладки и скорости набегающего потока, при этом дополнительные силы лобового сопротивления не учитывается при анализе управления.
 Модель РУ определяется следующими соотношениями \cite{боженов1986}:
-\begin{gather}
+\begin{equation}
+	\label{eq:modelling-rudder}
+	\begin{array}{ll}
     M_x^{rud} = m_x^{\delta} \cdot \delta_{\theta} \frac{\rho V^2}{2} U \\
     M_y^{rud} = m_y^{\delta} \cdot \delta_{\phi} \frac{\rho V^2}{2} U \\
     M_z^{rud} = m_z^{\delta} \cdot \delta_{H} \frac{\rho V^2}{2} U
-\end{gather}
+    \end{array}
+\end{equation}
 \noindent где:
 \begin{itemize}
     \item $M_x^{rud}, M_y^{rud}, M_z^{rud}$ -- управляющие моменты РУ по крену, курсу и дифференту, соответственно;
@@ -546,3 +552,82 @@
     \item $\delta_{\theta}, \delta_{\phi}, \delta_{H}$ -- углы перекладки рулей крена, направления и глубины, соответственно;
     \item $U$ -- водоизмещение аппарата, м$^3$.
 \end{itemize}
+
+\subsection{Численное моделирование поведения исполнителнительных механизмов ДРК в набегающем потоке}
+\subsubsection{Моделирование маршевого двигателя}
+В рамках исследования необходимо определить насколько меняется поведение ИМ ДРК при движении АНПА в набегающем потоке.
+Для численного анализа поведения маршевого движителя в набегающем потоке была разработана его блочная модель (рисунок \ref{fig:modelling-thruster}), где модель привода движителя описывается в соответствии с системой дифференциальных уравнений \ref{eq:motor_model}, а модель гребного винта - в соответствии с уравнениями \ref{eq:propeler_model}.
+Параметры моделирования представлены в таблице \ref{tab:modelling-thruster}.
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.8\linewidth]{modelling/Моделирование - маршевый движитель схема.png}
+    \caption{Блочно-визуальная модель численного моделирования маршевого движетеля ПА.}
+    \label{fig:modelling-thruster}
+\end{figure}
+
+\begin{table}
+    \caption{Параметры моделирования движителя ПА.}
+    \label{tab:modelling-thruster}
+    \centering
+    \begin{tabular}{lll}
+        \toprule
+        \makecell{Наименование \\ параметра} & \makecell{Идентификатор \\ в блочной модели} & Значение \\
+        \midrule
+        \multicolumn{3}{c}{Параметры ГВ} \\
+        \midrule
+        Диаметр, м  & D & 0,19\\
+        Коэф. $K_T$ & kt\_poly & $-0.0964\lambda^2 -0.2774\lambda + 0.3519$\\
+        Коэф. $K_Q$ & kq\_poly & $-0.0144\lambda^2 -0.0301\lambda + 0.0456$\\
+        \midrule
+        \multicolumn{3}{c}{Параметры электромотора} \\
+        \midrule
+        % Коэффициент момента, Н$\cdot$м/А & Km & 0,16\\
+        Момент инерции ротора, кг$\cdot$м$^2$ & Jrot & 2,5$\cdot$10$^{-4}$ \\
+        Сопротивление обмоток, Ом & Ranchor & 1,5 \\
+        Электрическая постоянная, c & Tem & 0,0004 \\
+        Коэффициент ЭДС, В/рад/с & Ce & 0,16 \\
+        \bottomrule
+    \end{tabular}
+\end{table}
+
+В рамках реализованной модели движителя был проведен анализ влияния соосного набегающего потока на упор создаваемый маршевым движителем при различных кодах управления (рисунок \ref{fig:modelling-thruster-velocity}), кроме того была явным образом расчитана зависимость упора создаваемого движителем от скорости набегающего потока для фиксированых значений кода управления (рисунок \ref{fig:modelling-thruster-code}).
+Видно, что создаваемый упор существенно зависит от набегающего потока и при больших скоростях движения падает почти в 2 раза.
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.8\linewidth]{modelling/Моделирование - маршевый движитель код.png}
+    \caption{Численное моделирование упора создаваемого маршевым движителем при различных параметрах скорости набегающего потока.}
+    \label{fig:modelling-thruster-velocity}
+\end{figure}
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.8\linewidth]{modelling/Моделирование - маршевый движитель скорость.png}
+    \caption{Численное моделирование упора создаваемого маршевым движителем при различных параметрах кода управления.}
+    \label{fig:modelling-thruster-code}
+\end{figure}
+
+\subsubsection{Моделирование подруливающего двигателя}
+В соответствии с моделью влияния набегающего потока на эффективность маршевого двигателя для численного анализа поведения подруливающего движителя была создана модель его блочная модель.
+Все параметры модели движителя и гребного винта соответствуют параметрам указанным в таблице \ref{tab:modelling-thruster}.
+Коэффицент подавления потока $C$ был принят с величиной 5.0.
+В рамках реализованной модели подруливающего движителя был проведен численное моделирование влияния соосного набегающего потока на эффективное значение упор создаваемый подруливащим движителем при различных значениях набегающего потока (рисунок \ref{fig:modelling-tunnel-velocity})
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.8\linewidth]{modelling/Моделирование - подруливающий движитель скорость.png}
+    \caption{Численное моделирование эффективного упора создаваемого подруливающим движителем при различных скоростях набегающего потока.}
+    \label{fig:modelling-tunnel-velocity}
+\end{figure}
+
+\subsubsection{Моделирование руля управления ПА}
+В соответствии с моделью руля управления (уравнение \ref{eq:modelling-rudder}) была составлена численная модель при этом коэффициент производной гидродинамической характеристики руля был взят за $0.0001$.
+Результаты численного моделирования момента создаваемого рулем управления при различных скоростях набегающего потока представлены на рисунке \ref{fig:modelling-rudder-velocity}.
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.8\linewidth]{modelling/Моделирование - рули скорость.png}
+    \caption{Численное моделирование момента создаваемого рулем управления при различных скоростях набегающего потока.}
+    \label{fig:modelling-rudder-velocity}
+\end{figure}
