Доработана вторая глава в части модели подруливающего движителя.

--- a/Dissertation/partPropulsion.tex
+++ b/Dissertation/partPropulsion.tex
@@ -495,6 +495,85 @@
 \end{equation}
 
 \subsection{Особенности работы движителей подруливающего типа}
+Описание работы подруливающего движителя описывается существенно более сложнее по сравнению с маршевым движителем за счёт особенностей взаимодействия создаваемой подруливающим движителем пропульсивной струи с корпусом подводного аппарата.
+Научные труды посвященные гидродинамическим особенностям работы подруливающих движителей в первую очередь были проведены в рамках исследования эффективности движительно-рулевых комплексов судов \cite{chislett1966influence, english1964design, brix1973lateral}.
+Кроме того, большое исследование данного вопроса было проведено в докторской диссертации \cite{nienhuis1992analysis}.
+Общий вывод представленных работ и результатов натурных экспериментов заключается в том, что работа подруливающих движителей тунельного типа становится неэффективной на скоростях движения судов свыше 1–1,5 м/с \cite{english63}.
+
+Первое исследование эффективности подруливающих движителей для АНПА была было проведено в работе \cite{saunders2002effect}. 
+В рамках этой работы представлен полноценный анализ эффективности подруливающего движителя аппарата ``C-SCOUT'' для большого диапазона скоростей его движения и углов атаки в диапазоне $\pm90^{\circ}$.
+
+Большое исследование эффективности работы подруливающих движителей АНПА с формированием обобщенной модели влияния скорости и направления набегающего потока на аппарат было проведено в рамках работы \cite{palmer2008modelling} а так же в последующей докторской работе этого же автора \cite{palmer2009analysis}.
+
+В упомянутых научных работых было показано что падение эффективности подруливающего движителя не связано с уменьшеньем эффективности самого устроства, а скорее с взаимодействием пропульстивной струи, которую создает подруливающий движитель с набегающим на ПА потоком.
+
+Работа подруливающего движителя ПА в случае если он находится в состоянии покоя полностью эквивалентна модели маршевого движителя, т.е. на аппарат действует определенная сила (упор) приложенная к точке крепления движителя за счет формирования пропульсивной струи ПА.
+Но в случае, когда ПА движется с продольной скоростью $u$, то пропульсивная струя формируемая подруливающим движителем формирует гидродинамическую тень (на рисунке закрашена серым цветом) на корпусе ПА в области за подруливающей шахтой (рисунок \ref{fig:modelling-tunnel}).
+За счет этого формируется разность давлений между различными областями ПА, которая, в свою очередь, формирует силу $F_S$ обратную по направлению силе создаваемой подруливающим движителем $F_T$.
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.8\linewidth]{modelling/Моделирование - подруливающий движитель силы.png}
+    \caption{Особенности поведения подруливающего движителя в набегающем потоке.}
+    \label{fig:modelling-tunnel}
+\end{figure}
+
+При низких и средних скоростях продольного движения ПА, когда формируемая подруливающим движителем скорость пропульсивной струи существенно выше скорости АНПА наклон струи незначителен, гидродинамическая тень мала и соответственно мала и сила создаваемая разностью давлений на корпус ПА.
+При высоких скоростях движения ПА, когда скорость набегаемого на АПНА потока сопоставима или выше по скорости чем скорость создаваемой подруливающим движителем пропульсивной струи, её наклон существенно выше, как и создаваемая гидродинамическая тень и общая эффективность подруливающего движителя падает значительно.
+Важно так же учитывать что с увеличением гидродинамической тени точка приложения разности давлений начинает сдвигаться и результирующий момент действующий на аппарат формируемый силой $F_S$ меняется.
+
+При этом разница давлений вокруг входа в туннель подруливающего движителя и вокруг выходом из него не оказывают значительного влияния на эффективность подруливающего движителя \cite{brix1973lateral}.
+
+Количественные изменения эффективности подруливающего движителя были проведены в работе \cite{chislett1966influence} в котором экспериментально исследовалась эффективность движительно-рулевого комплекса на макете судна.
+В ходе эксперимента авторы получили коэффициенты эффективности упора $K_F$ создаваемого подруливающим движителем и момента сопротивления вращению гребного винта $K_N$.
+Они определяются следующим образом:
+\begin{equation*}
+	K_F = \frac{T_{u/u_j}}{T_0}; \: K_N = \frac{N_{u/u_j}}{N_0}
+\end{equation*}
+\noindent где $T_{u/u_j}$ и $N_{u/u_j}$ упор и момент сопротивления вращению при набегающем потоке, а $T_0$ $N_0$ -- при его отсутствии.
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.8\linewidth]{modelling/Эксперимент - Kt Kn подруливающий движитель.png}
+    \caption{Коэффициенты $K_F$, $K_N$ подруливающего движителя, полученные в ходе натурных экспериментов.}
+    \label{fig:tunnel_effectivness}
+\end{figure}
+
+По рисунку \ref{fig:tunnel_effectivness} представленному в статье \cite{chislett1966influence} видно что результирующий упор создаваемый подруливающим движителем падает при большом отношении скорости набегающего потока к скорости пропульсивной струи, при этом как момент сопротивления вращению ГВ падает существенно слабее, т.е. эффективность работы подруливающего устройства становится крайне низкой.
+
+Экспериментальные исследование эффективности подруливающего движителя для АНПА было так же проведено в работе \cite{beveridge1972design}, где были получены данные аналогичные представленным на рисунке \ref{fig:tunnel_effectivness}.
+
+в работе \cite{palmer2009analysis} предложено силу формируемую разностью давлений представлять следующим образом:
+\begin{equation*}
+	T_S = T_T \exp \left[ -c \left( \frac{u}{u_j}^2 \right) \right]
+\end{equation*}
+\noindent где:
+\begin{itemize}
+	\item $T_S$ -- сила действующая на аппарат в связи с разностью давлений;
+	\item $T_T$ -- упор создаваемый подруливающим движителем;
+	\item $u$ - скорость набегающего потока;
+	\item $u_j$ -- скорость пропульстивной струи
+	\item $c$ -- некоторый коэффициент.
+\end{itemize}
+
+В свою очередь скорость пропульсивной струи, создаваемой работой подруливающего движителя может быть определена следующим уравнением:
+\begin{equation*}
+	u_j = \sqrt{\frac{T_T}{\rho A}}
+\end{equation*}
+\noindent где $\rho$ -- плотность воды, $A=\pi R^2$, где $R$ -- диаметр гребного винта подруливающего движителя.
+
+Момент действующий на ПА формируемый упором движителя и гидродинамической силой определяется следующим образом:
+\begin{equation*}
+	M = F_T x_T + (F_T-F_S)x_S
+\end{equation*}
+\noindent где $x_T$ -- расстояние между ЦП подводного аппарата и точкой приложения силы $F_T$, а в свою очередь $x_S$ - это расстояние между ЦП ПА и точкой приложениия силы $F_S$, которая определяется следующим образом:
+\begin{equation*}
+	x_S = x_T - kD\frac{u}{u_j}
+\end{equation*}
+\noindent где $D$ -- диаметр туннеля подруливающего движителя, $k$ -- некоторый коэффициент.
+
+Кроме величины набегающего потока на эффективность подруливающего движителя так же влияет угол атаки, т.е. разница между вектором скорости ПА и вектором скорости набегающего потока, которая возникает в случае несоосного течения или в ходе переходных процессов по курсу следования ПА.
+В работе \cite{palmer2008modelling} представлена модель зависимости упора создаваемого подруливающим движителем от скорости набегающего потока и угла атаки.
 
 \subsection{Модель рулевых устройств}
 В техническом отчете \cite{steenson2011control} подробно представлен расчет подъемной силы для АНПА ``Dolphin 2'', в котором ДРК состоит из четырех кормовых рулей нормального расположения и четырех подруливающих движителей (2-х вертикальных и 2-х горизонтальных).
@@ -561,7 +640,7 @@
 
 \begin{figure}[ht]
     \centering
-    \includegraphics[width=0.8\linewidth]{modelling/Моделирование - маршевый движитель схема.png}
+    \includegraphics[width=1.0\linewidth]{modelling/Моделирование - маршевый движитель схема.png}
     \caption{Блочно-визуальная модель численного моделирования маршевого движетеля ПА.}
     \label{fig:modelling-thruster}
 \end{figure}
@@ -572,13 +651,13 @@
     \centering
     \begin{tabular}{lll}
         \toprule
-        \makecell{Наименование \\ параметра} & \makecell{Идентификатор \\ в блочной модели} & Значение \\
+        \makecell[l]{Наименование \\ параметра} & \makecell[l]{Идентификатор \\ в блочной модели} & Значение \\
         \midrule
         \multicolumn{3}{c}{Параметры ГВ} \\
         \midrule
         Диаметр, м  & D & 0,19\\
-        Коэф. $K_T$ & kt\_poly & $-0.0964\lambda^2 -0.2774\lambda + 0.3519$\\
-        Коэф. $K_Q$ & kq\_poly & $-0.0144\lambda^2 -0.0301\lambda + 0.0456$\\
+        Коэф. $K_T$ & kt\_poly & $-0.096\lambda^2 -0.277\lambda + 0.351$\\
+        Коэф. $K_Q$ & kq\_poly & $-0.014\lambda^2 -0.030\lambda + 0.045$\\
         \midrule
         \multicolumn{3}{c}{Параметры электромотора} \\
         \midrule
