--- a/biblio/external.bib
+++ b/biblio/external.bib
@@ -566,18 +566,6 @@
   language={english}
 }
 
-@article{palmer2008modelling,
-  title={Modelling tunnel thrusters for autonomous underwater vehicles},
-  author={Palmer, Alistair and Hearn, Grant E and Stevenson, Peter},
-  journal={IFAC Proceedings Volumes},
-  volume={41},
-  number={1},
-  pages={91--96},
-  year={2008},
-  publisher={Elsevier},
-  language={english}
-}
-
 @BOOK{инзарцев2018подводные,
   title={Подводные робототехнические комплексы: системы, технологии, применение},
   author={Инзарцев, АВ and Киселев, ЛВ and Костенко, ВВ and Матвиенко, ЮВ and Павин, АМ and Щербатюк, АФ},
@@ -655,14 +643,6 @@
   language={english}
 }
 
-@article{cody1992experimental,
-  title={An experimental study of the response of small thrusters to step and triangular wave inputs},
-  author={Cody, SE},
-  journal={MSME Thesis, Naval Postgraduate School, Monterey, CA},
-  year={1992},
-  language={english}
-}
-
 @article{blanke2000dynamic,
   title={Dynamic model for thrust generation of marine propellers},
   author={Blanke, Mogens and Lindegaard, Karl-Petter and Fossen, Thor I},
@@ -719,14 +699,6 @@
   pages={251--262},
   year={1975},
   publisher={IOS Press},
-  language={english}
-}
-
-@techreport{mclean1991dynamic,
-  title={Dynamic performance of small diameter tunnel thrusters},
-  author={McLean, Michael B},
-  year={1991},
-  institution={NAVAL POSTGRADUATE SCHOOL MONTEREY CA},
   language={english}
 }
 
@@ -860,4 +832,119 @@
   year={2010},
   organization={IEEE},
   language={english}
+}
+
+@article{10.1002, 
+  year = {1998}, 
+  title = {{Non‐linear and adaptive backstepping designs for tracking control of ships}}, 
+  author = {Godhavn, J.‐M. and Fossen, T. I. and Berge, S. P.}, 
+  journal = {International Journal of Adaptive Control and Signal Processing}, 
+  issn = {1099-1115}, 
+  doi = {10.1002/(sici)1099-1115(199812)12:8<649::aid-acs515>3.0.co;2-p},
+  pages = {649--670}, 
+  number = {8}, 
+  volume = {12},
+  language={english}
+}
+
+@article{english1964design,
+  title={The design and performance of lateral thrust units for ships hydrodynamic considerations},
+  author={English, JW},
+  journal={National Physical Laboratory, NPL, Ship Division, Report SH R53},
+  year={1964},
+  language={english}
+}
+
+@inproceedings{brix1973lateral,
+  title={Lateral thrusters with anti-suction tunnels},
+  author={Brix, JE and Bussemaker, O},
+  booktitle={Publication of: North American Tug Convention (1st)},
+  number={Proceeding},
+  year={1973},
+  language={english}
+}
+
+@PHDTHESIS{nienhuis1992analysis,
+  author       = {Nienhuis, U},
+  title        = {Analysis of Thruster Effectivity for Dynamic Positioning and Low Speed Manoeuvring},
+  school       = {Technische Universit{\"a}t Delft},
+  year         = {1992},
+  language     = {english}
+}
+
+@article{english63,
+  title={The Design and Performance of Lateral Thrust Units for Ships},
+  author={English, J.W.},
+  journal={Trans. RINA},
+  volume={105},
+  number={3},
+  pages={251--279},
+  year={1963},
+  language={english}
+}
+
+@inproceedings{saunders2002effect,
+  title={The effect of forward vehicle velocity on through-body AUV tunnel thruster performance},
+  author={Saunders, Aaron and Nahon, Meyer},
+  booktitle={OCEANS'02 MTS/IEEE},
+  volume={1},
+  pages={250--259},
+  year={2002},
+  organization={IEEE},
+  language={english}
+}
+
+@article{palmer2008modelling,
+  title={Modelling tunnel thrusters for autonomous underwater vehicles},
+  author={Palmer, Alistair and Hearn, Grant E and Stevenson, Peter},
+  journal={IFAC Proceedings Volumes},
+  volume={41},
+  number={1},
+  pages={91--96},
+  year={2008},
+  publisher={Elsevier},
+  language={english}
+}
+
+@phdthesis{palmer2009analysis,
+  title={Analysis of the propulsion and manoeuvring characteristics of survey-style AUVs and the development of a multi-purpose AUV},
+  author={Palmer, Alistair Robin},
+  year={2009},
+  school={University of Southampton},
+  language={english}
+}
+
+@article{cody1992experimental,
+  title={An experimental study of the response of small thrusters to step and triangular wave inputs},
+  author={Cody, SE},
+  journal={MSME Thesis, Naval Postgraduate School, Monterey, CA},
+  year={1992},
+  language={english}
+}
+
+@techreport{mclean1991dynamic,
+  title={Dynamic performance of small diameter tunnel thrusters},
+  author={McLean, Michael B},
+  year={1991},
+  institution={NAVAL POSTGRADUATE SCHOOL MONTEREY CA},
+  language={english}
+}
+
+@article{chislett1966influence,
+  title={Influence of ship speed on the effectiveness of a lateral-thrust unit},
+  author={Chislett, MS and Bjorheden, O},
+  journal={Hydro-and Aerodynamics Laboratory, Hydrodynamics Section, Lyngby, Denmark, Report No. Hy-8},
+  year={1966},
+  language={english}
+}
+
+@article{beveridge1972design,
+  title={Design and performance of bow thrusters},
+  author={Beveridge, John L},
+  journal={Marine Technology and SNAME News},
+  volume={9},
+  number={04},
+  pages={439--453},
+  year={1972},
+  publisher={OnePetro}
 }
