Чутка поправлено название главы. Добавил подсекцию с заключением. Пока пустым. Там, по хорошему, надо еще метод переделать и получить одно значение.

--- a/Dissertation/partVelocity.tex
+++ b/Dissertation/partVelocity.tex
@@ -1,4 +1,4 @@
-\chapter{Разработка метода оценки скорости набегающего потока в устоявшемся режиме движения по изменению параметров работы маршевых движителей}\label{ch:Velocity}
+\chapter{Оценка скорости набегающего потока в устоявшемся режиме движения ПА по изменению параметров работы маршевых движителей}\label{ch:Velocity}
 
 \section{Анализ модели движителя в установившемся режиме работы}
 Упор создаваемый гребным винтом движителя $T$ и момент сопротивления вращению $Q$ формируемый при этом на валу определяется следующими формулами \cite{пантов1973основы}:
@@ -349,3 +349,5 @@
     \caption{График скорости продольного движения АНПА ``ММТ-3000'' полученный разными методами на проверочном участке движения от 240 до 410 секунд.}
     \label{fig:mmt3000_velocity_check}
 \end{figure}
+
+\section{Выводы по 2}
