--- a/Dissertation/partStatement.tex
+++ b/Dissertation/partStatement.tex
@@ -1,5 +1,5 @@
-\chapter{Обзор современных подходов к решению задачи распределения управляющего воздейвия на ДРК подводных аппаратов} \label{ch:Statement}
-\section{Формулировка задачи распределения управляющих воздействий}\label{sec:Statement/ProblemStatement}
+\chapter{Обзор современных подходов к решению задачи управления ДРК ПА} \label{ch:Statement}
+\section{Формулировка задачи управления ДРК ПА}\label{sec:Statement/ProblemStatement}
 Пусть динамика подводного аппарата, оснащенного избыточным ДРК, определена в формулировках метода пространства состояний следующим образом:
 \begin{equation}
     \vect{\dot{x}}(t) = a(\vect{x}(t)) + B_u(\vect{x}(t))\vect{u}(t)
