Мелкие правки по тексту.

--- a/Dissertation/partPropulsion.tex
+++ b/Dissertation/partPropulsion.tex
@@ -551,8 +551,8 @@
 \begin{itemize}
 	\item $T_S$ -- сила действующая на аппарат в связи с разностью давлений;
 	\item $T_T$ -- упор создаваемый подруливающим движителем;
-	\item $u$ - скорость набегающего потока;
-	\item $u_j$ -- скорость пропульстивной струи
+	\item $u$ -- скорость набегающего потока;
+	\item $u_j$ -- скорость пропульстивной струи;
 	\item $c$ -- некоторый коэффициент.
 \end{itemize}
 
