Небольшие правки по названию глав.

--- a/Dissertation/partVelocity.tex
+++ b/Dissertation/partVelocity.tex
@@ -93,7 +93,7 @@
 Этот коэффициент важен для движителей судов, т.к., зачастую, движители там установлены в гидродинамической тени, которую создает корпус судна и там учет этого параметра необходим.
 При разработке автономных необитаемых подводных аппаратов, за счет малого и обтекаемого корпуса и, зачастую, за счет выноса маршевой группы из гидродинамической тени создаваемой аппаратом, этим коэффициентом можно пренебречь.
 
-\section{Учёт геометрии ДРК в методе идентификации скорости по параметрам маршевых движителей}
+\section{Учёт пространственной ориентации движителей при оценке скорости по параметрам их работы}
 В случае, если подводный аппарат оснащён единственным маршевым движителем, а маневрирование обеспечивается рулями управления в режиме крейсерской скорости или при помощи подруливающих движителей в позиционном режиме или в режиме малых скоростей. Примером таких аппаратов может служить линейка АНПА ``Remus'' \cite{allen1997remus, kukulya2010under}.
 
 С другой стороны, отечественная практика разработки автономных подводных аппаратов отходит от мировой и в основном заключается в использовании четырех движителей, расположенных в кормовой секции под некоторым углом к продольной оси аппарата.
@@ -126,8 +126,8 @@
 
 Пусть течение в области движения АНПА неизменно по скорости и направлению и определяется переменными $u_c$ и $\phi_c$ В ИСК, соответственно.
 
-\section{Исследование разработанного метода идентификации скорости набегающего потока по данным запусков АНПА ``ММТ-3000''}
-В рамках исследования была проверена гипотеза о работоспособности метода идентификации скорости набегающего потока по изменению параметров работы приводов маршевых двигателей.
+\section{Исследование разработанного метода оценки скорости набегающего потока по данным запусков АНПА ``ММТ-3000''}
+В рамках исследования была проверена гипотеза о работоспособности метода оценки скорости набегающего потока по изменению параметров работы приводов маршевых двигателей.
 
 Для этого этого были проанализированы стендовые и маршевые испытания движителей маршевой группы АНПА ``ММТ-3000'', а так же проанализированы данные тестовых запусков подводного аппарата в рамках которых были идентифицированы ГДХ аппарата.
 
